# sigrok-cli

./: .gitignore  CMakeLists.txt  HACKING  Makefile.am  NEWS  README  anykey.c  autogen.sh  configure.ac  decode.c  device.c  input.c  main.c  options.c  output.c  parsers.c  session.c  show.c  sigrok-cli.c  sigrok-cli.h
.github/workflows/: build.yml
cmake/: config.h.in
contrib/: Makefile.am  org.sigrok.sigrok-cli.desktop  sigrok-cli.nsi.in  sigrok-cli_cross.nsi.in
doc/: Makefile.am  sigrok-cli.1
